edited the menu and restaurant