@@ -14,12 +14,20 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
+
 
 @Component
 @Service
 public class RestaurantServiceImpl implements RestaurantService {
 
-    private final RestaurantRepository restaurantRepository;
+    private  RestaurantRepository restaurantRepository;
+    private static final Logger LOGGER = LoggerFactory.getLogger(RestaurantServiceImpl.class);
+
 
     @Autowired
     public RestaurantServiceImpl(RestaurantRepository restaurantRepository) {
@@ -51,19 +59,50 @@ public class RestaurantServiceImpl implements RestaurantService {
 
    
     // Read all restaurants
-    @Override
-    public List<RestaurantDTO> getAllRestaurants() throws Exception {
-        List<Restaurant> restaurants = restaurantRepository.findAll();
-        List<RestaurantDTO> restaurantDTOs = restaurants.stream()
+    // @Override
+    // public List<RestaurantDTO> getAllRestaurants() throws Exception {
+    //     List<Restaurant> restaurants = restaurantRepository.findAll();
+    //     List<RestaurantDTO> restaurantDTOs = restaurants.stream()
+    //             .map(restaurant -> {
+    //                 try {
+    //                     return restaurant.convertToDTO();
+    //                 } catch (Exception e) {
+    //                     throw new RuntimeException(e);
+    //                 }
+    //             })
+    //             .toList();
+    //     return restaurantDTOs;
+    // }
+
+
+     @Override
+    public List<RestaurantDTO> getAllRestaurants() {
+    	LOGGER.info("LOG FOR restuarants - In GET ALL restuarants");
+    	Stream<Restaurant> Restaurantstream = StreamSupport.stream(restaurantRepository
+    								.findAll().spliterator(), false)
+					                .filter(restaurant -> {
+					                    try {
+					                        boolean isValid = restaurant.verifyHMAC();
+					                        if (!isValid) {
+					                            LOGGER.warn("HMAC verification failed for restuarant ID: " + restaurant.getRestaurantId());
+					                        }
+					                        return isValid;
+					                    } catch (Exception e) {
+					                        LOGGER.error("Error verifying HMAC for restuarant ID: " + restaurant.getRestaurantId(), e);
+					                        return false;  
+					                    }
+					                });
+    	
+    	return Restaurantstream
                 .map(restaurant -> {
-                    try {
-                        return restaurant.convertToDTO();
-                    } catch (Exception e) {
-                        throw new RuntimeException(e);
-                    }
-                })
-                .toList();
-        return restaurantDTOs;
+            try {
+                return restaurant.convertToDTO();
+            } catch (Exception e) {
+                LOGGER.error("Error converting restaurant to DTO for ID: " + restaurant.getRestaurantId(), e);
+                return null; 
+            }
+        })
+                .collect(Collectors.toList());
     }
 
     // Read a restaurant by ID
